# loobric-linuxcnc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  loobric_linuxcnc.py  pyproject.toml  smooth_linuxcnc.py
.github/workflows/: dco.yml  test.yml
examples/sim.axis.loobric/: axis.ini  loobric_handler.py  loobric_panel.ui
examples/sim.axis.loobric/gladevcp/: gladevcp_panel_cmds.hal  gladevcp_panel_tester_cmds.hal  gladevcp_tab_cmds.hal  probe_cmds.hal
examples/sim.axis.loobric/hal/: README.md  loobric_button.hal  loobric_button.py  loobric_panel.xml
examples/sim.axis.loobric/qtvcp/: qtvcp_tab_cmds.hal
examples/sim.axis.smooth/: axis.ini  smooth_handler.py  smooth_panel.ui
tests/: test_init.py  test_push.py  test_sync_cycle.py  test_tooltable.py
tests/fixtures/: sample.tbl
