[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smooth-linuxcnc"
version = "0.5.0"
description = "LinuxCNC integration for Smooth tool synchronization"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "sliptonic" }]
keywords = ["cnc", "cam", "linuxcnc", "tool-table", "smooth", "machining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Manufacturing",
]
# Intentionally stdlib-only: the client must run on old, image-built LinuxCNC
# control boxes where pip is impractical. Installing via pip is a convenience
# for modern boxes; the single file stays copy-and-run on everything else.
dependencies = []

[project.scripts]
smooth-linuxcnc = "smooth_linuxcnc:cli"

[project.urls]
Homepage = "https://github.com/loobric/smooth-linuxcnc"
Repository = "https://github.com/loobric/smooth-linuxcnc"
Issues = "https://github.com/loobric/smooth-linuxcnc/issues"

[tool.setuptools]
# One file, shipped as a top-level module — pip-installable AND still
# copy-anywhere. No package directory keeps the single-file promise intact.
py-modules = ["smooth_linuxcnc"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
