[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loobric-linuxcnc"
version = "0.6.1"
description = "LinuxCNC integration for Loobric tool synchronization"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "sliptonic" }]
keywords = ["cnc", "cam", "linuxcnc", "tool-table", "loobric", "machining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Manufacturing",
]
# Intentionally stdlib-only: the client must run on old, image-built LinuxCNC
# control boxes where pip is impractical. Installing via pip is a convenience
# for modern boxes; the single file stays copy-and-run on everything else.
dependencies = []

[project.scripts]
loobric-linuxcnc = "loobric_linuxcnc:cli"

[project.urls]
Homepage = "https://github.com/loobric/loobric-linuxcnc"
Repository = "https://github.com/loobric/loobric-linuxcnc"
Issues = "https://github.com/loobric/loobric-linuxcnc/issues"

[tool.setuptools]
# One file, shipped as a top-level module — pip-installable AND still
# copy-anywhere. No package directory keeps the single-file promise intact.
py-modules = ["loobric_linuxcnc"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
